# FlowfDesk

./: .env.example  .gitignore  README.md  alembic.ini  project-engineering-guide.md  pyproject.toml  run_demo.py
.github/workflows/: ci.yml
app/: __init__.py  main.py  seed.py
app/api/middleware/: error_handlers.py
app/api/v1/routes/: tickets.py  users.py
app/api/v1/schemas/: ticket_schemas.py
app/core/: config.py  container.py  logging.py
app/domain/: __init__.py  exceptions.py
app/domain/entities/: ticket.py
app/domain/ports/: __init__.py  repositories.py
app/domain/use_cases/: __init__.py  add_comment.py  close_ticket.py  create_ticket.py  search_tickets.py  update_ticket.py  upload_attachment.py
app/infrastructure/cache/: redis_cache.py
app/infrastructure/database/: models.py  session.py
app/infrastructure/database/migrations/: env.py
app/infrastructure/database/migrations/versions/: 001_initial_schema.py
app/infrastructure/database/repositories/: postgres_repos.py
app/infrastructure/messaging/: kafka_consumers.py  kafka_producer.py
app/infrastructure/search/: __init__.py  elasticsearch_adapter.py
app/infrastructure/storage/: s3_adapter.py
app/static/: animations.css  app.js  base.css  components.css  layout.css  styles.css
app/templates/: index.html
docker/: Dockerfile  docker-compose.yml
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_create_ticket.py  test_entities_comments.py  test_search_upload.py  test_update_close_ticket.py
