[project]
name = "flowdesk"
version = "0.1.0"
description = "Internal ticket management and support system with intelligent search"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-restx>=1.3",
    "flask-cors>=4.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "kafka-python-ng>=2.2",
    "elasticsearch>=8.0",
    "boto3>=1.34",
    "gunicorn>=21.2",
    "python-dotenv>=1.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-flask>=1.3",
    "ruff>=0.2",
    "mypy>=1.8",
    "factory-boy>=3.3",
    "faker>=22.0",
    "moto[s3]>=5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires running services)",
]
